# minimal-data-science

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agent-reference/: copilot-core.instructions.md  copilot-guidance-ja-reference.md  new-grad-data-scientist-mentoring.instructions.md
docs/docker-memo/: 001_dockerfile-best-practice.md
notebooks/: xxx_template.ipynb
notebooks/test_notebooks/: 001_torch_import_test_mps.ipynb  002_torch_import_test_gpu.ipynb
