# プロジェクトをパッケージ化するために使う設定。
[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name = "minimal_data_science"
version = "0.0.1"
description = "minimal repo for data science"
authors = [
    { name = "Kaise" },
]

readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = ">=3.12.0"

[tool.ruff]
line-length = 99
src = ["minimal_data_science"]
include = ["pyproject.toml", "minimal_data_science/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["minimal_data_science"]
force-sort-within-sections = true
